--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
 @tailwind utilities;
 
 
+@font-face {
+  font-family: 'Fixedsys Excelsior';
+  src: url('./assets/font/FSEX300.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap; /* Optional: Prevents FOIT */
+}
 
 html {
     scroll-behavior: smooth;
